test/spec_vectors/simd_i16x8_cmp/fail/module_29.wat
(module (func $i16x8.ge_s-arg-empty (result v128) (i16x8.ge_s)))